--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ async = ["dep:futures-util"]
 send = ["parking_lot/send_guard", "error-send"]
 error-send = []
 serialize = ["dep:serde", "dep:erased-serde", "dep:serde-value"]
+uuid = ["dep:uuid", "dep:serde"]
 macros = ["mlua_derive/macros"]
 anyhow = ["dep:anyhow", "error-send"]
 userdata-wrappers = []
@@ -53,6 +54,7 @@ num-traits = { version = "0.2.14" }
 rustc-hash = "2.0"
 futures-util = { version = "0.3", optional = true, default-features = false, features = ["std"] }
 serde = { version = "1.0", optional = true }
+uuid = { version = "1.10.0", optional = true, features = ["v7", "serde"]}
 erased-serde = { version = "0.4", optional = true }
 serde-value = { version = "0.7", optional = true }
 parking_lot = { version = "0.12", features = ["arc_lock"] }
